# photobrowser

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindExiv2.cmake  FindSodiumCxx.cmake  Findglib-2.0.cmake  Findgstreamer-1.0.cmake
scripts/: ShellyExt.hs  deploy.hs  deploy_shelly.hs  deploy_turtle.hs
src/browser/: CMakeLists.txt  Info.plist.in  app.cpp  app.h  browserwindow.cpp  browserwindow.h  directorytree.cpp  directorytree.h  filmrollview.cpp  filmrollview.h  fullscreensplitter.cpp  fullscreensplitter.h  gstreamer_utils.cpp  gstreamer_utils.h  imageview.cpp  imageview.h  main.cpp  mediadirectorymodel.cpp  mediadirectorymodel.h  sqaction.cpp  sqaction.h  sqlistview.cpp  sqlistview.h  sqtimer.cpp  sqtimer.h  tagsview.cpp  tagsview.h  thumbnailcreator.cpp  thumbnailcreator.h  tools.cpp  tools.h
src/browser/translations/: photobrowser_de.ts
src/tools/setdatefrommeta/: CMakeLists.txt  main.cpp
src/util/: CMakeLists.txt  fileutil.cpp  fileutil.h  fileutil_mac.mm  metadatautil.cpp  metadatautil.h  tags.cpp  tags.h  util.cpp  util.h  util_mac.mm
